Fix a bug - now text will wrap when it is too long to fit

--- a/sass/tweets.sass
+++ b/sass/tweets.sass
@@ -12,6 +12,9 @@
     margin-top: 1.5rem
     border-bottom: 3px solid #000
     padding-bottom: 1.5rem
+    width: 100%
+    height: auto
+    word-wrap: break-word
 
   & article header
     display: flex
